--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+
+nav {
+  font-size:20px;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
@@ -5,6 +11,26 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
+}
+
+.banner {
+  position: relative;
+  text-align: center;
+}
+
+.banner-img {
+  width: 100%;
+  height: auto;
+}
+.hero-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  font-size: 5px;
+  color: #CE217D;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .App-header {
