--- a/src/styles/Library.css
+++ b/src/styles/Library.css
@@ -7,8 +7,10 @@
 	background-image: url('/assets/images/music-logo.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
+	width: 100%;
+	position: relative;
+	height: auto;
 
-		
 
 }
 
